// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpScreen snapshot test should render correct ui for signup when fails with 404 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Sign up
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 45,
                "marginHorizontal": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Employee ID"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-input"
                  underlineColorAndroid="transparent"
                  value="some"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="email-address"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Email"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-email-input"
                  underlineColorAndroid="transparent"
                  value="code@mail.com"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginVertical": 45,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="sign-up-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Register
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 25.5,
                    },
                  ]
                }
              >
                Already have an account?
                 
              </Text>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="sign-in-button"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 25.5,
                        "fontWeight": "bold",
                        "textDecorationColor": "#FFFFFF",
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Login
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingBottom": 40,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                    By registering you accept our 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="privacy-policy-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Privacy Policy
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                     and 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="terms-and-condition-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Terms & Conditions
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignUpScreen snapshot test should render correct ui for signup when fails with 500 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Sign up
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 45,
                "marginHorizontal": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Employee ID"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-input"
                  underlineColorAndroid="transparent"
                  value="some"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="email-address"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Email"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-email-input"
                  underlineColorAndroid="transparent"
                  value="code@mail.com"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginVertical": 45,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="sign-up-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Register
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 25.5,
                    },
                  ]
                }
              >
                Already have an account?
                 
              </Text>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="sign-in-button"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 25.5,
                        "fontWeight": "bold",
                        "textDecorationColor": "#FFFFFF",
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Login
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingBottom": 40,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                    By registering you accept our 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="privacy-policy-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Privacy Policy
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                     and 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="terms-and-condition-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Terms & Conditions
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignUpScreen snapshot test should render correct ui for signup when succeeds 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Sign up
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 45,
                "marginHorizontal": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Employee ID"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-input"
                  underlineColorAndroid="transparent"
                  value="some"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="email-address"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Email"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="employee-email-input"
                  underlineColorAndroid="transparent"
                  value="code@mail.com"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginVertical": 45,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": true,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="sign-up-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <ActivityIndicator
                      animating={true}
                      color="#FFFFFF"
                      hidesWhenStopped={true}
                      size="small"
                      style={
                        Object {
                          "marginVertical": 2,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 25.5,
                    },
                  ]
                }
              >
                Already have an account?
                 
              </Text>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="sign-in-button"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 25.5,
                        "fontWeight": "bold",
                        "textDecorationColor": "#FFFFFF",
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Login
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingBottom": 40,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                    By registering you accept our 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="privacy-policy-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Privacy Policy
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                     and 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="terms-and-condition-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Terms & Conditions
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;
